Revelation changelog

---------------[ xxxx-xx-xx : 0.4.6 ]---------------

2006-01-22  Erik Grinaker <erikg@codepoet.no>

	* bumped version number to 0.4.6

	* rewrote the password generator

	* improved password checking

2006-01-21  Erik Grinaker <erikg@codepoet.no>

	* use icons instead of colors in password entries to indicate
	strength

	* use stock gtk icon sizes instead of custom ones

	* minor improvements to password checking

	* added Shannon entropy test to password checker

	* improved the searchbar, and use it instead of find dialog

2006-01-20  Erik Grinaker <erikg@codepoet.no>

	* strip xml entities from password on clipboard copy or
	drag/drop

	* fix crash in Password Safe import/export with fields longer
	than 256 chars

	* changed default file format for export to XML

2006-01-19  Erik Grinaker <erikg@codepoet.no>

	* fixed drag and drop undo/redo crashes

2006-01-18  Erik Grinaker <erikg@codepoet.no>

	* updated the copyright period

	* use correct key path for applet show_passwords gconf key

	* new applet option to show/hide search entry [Andreas Sliwka]

	* made the applet search entry slightly smaller

	* use full path when starting Revelation from applet

2006-01-14  Erik Grinaker <erikg@codepoet.no>

	* don't initialize python modules during configure checks

	* remove GNOME_RevelationApplet.server during make clean

	* changed button "Edit" to "Update" in edit entry dialog

---------------[ 2005-08-25 : 0.4.5 ]---------------

2005-08-24  Erik Grinaker <erikg@codepoet.no>

	* added GPass 0.5.x export

	* fixed a bug when importing GPass 0.4.x files with empty note

	* make GPass importer skip hostnames containing only http://

	* GPass importer handles multi-line notes correctly

	* added MyPasswordSafe import/export for old file format

2005-08-23  Erik Grinaker <erikg@codepoet.no>

	* more informative error messages for gnomemisc module

	* check for necessary python modules at configure-time
